--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body> 
 <h1> Odin Recipes </h1>
-<a href="https://sweetpotatosoul.com/vegan-creamy-pasta-with-seared-mushroom-scallops/"> Vegan Creamy Pasta </a>
+<a href="http://127.0.0.1:5500/veganpasta.html"> Vegan Creamy Pasta </a>
 
 </body>
 
