add cauliflowertacos.html index.html veganpasta.html

--- a/veganpasta.html
+++ b/veganpasta.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head> 
 <meta charset="UTF-8">
-<title> </title>
+<title> Vegan Pasta </title>
 </head>
 <body> 
 <h1> Vegan Creamy Pasta with Seared Mushroom Scallops </h1>
@@ -48,9 +48,5 @@
 <li>Serve the vegan creamy pasta with the seared mushroom scallops, a squeeze of fresh lemon juice, and vegan parmesan cheese. I also like to garnish with chopped fresh herbs, parsley, red pepper flakes, and black pepper</li>
 <br>
 </ol>
-
-
 </body>
-
-
 </html>
