--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 </head>
 <body> 
 <h1> Odin Recipes </h1>
-<a href="http://127.0.0.1:5500/veganpasta.html"> Vegan Creamy Pasta </a>
+<ul>
+<li><a href="http://127.0.0.1:5500/veganpasta.html"> Vegan Creamy Pasta </a></li>
+<li> <a href="cauliflowertacos.html">Vegan Cauliflower Tacos</a></li>
+<li>               </li>
+<li>                </li>
 
 </body>
 
 
 
-
+</ul>
 </html>
