--- a/cauliflowertacos.html
+++ b/cauliflowertacos.html
@@ -10,4 +10,38 @@
  <h1>Roasted Cauliflower Tacos with Chipotle Romesco </h1>
  <img src="CauliflowerTacos.jpeg" alt="Picture of Roasted Cauliflower Tacos">
 </body>
+<h2> Smoky, roasted cauliflower tacos with a spicy chipotle romesco sauce! An easy (30 minutes!) and flavorful plant-based meal that’s versatile, healthy, and so satisfying!</h2>
+<h3>Ingredients</h3>
+<ul> 
+<li> 2 small heads cauliflower </li>
+<li>2-4 Tbsp avocado or coconut oil </li>
+<li>3 tsp ground cumin</li>
+<li> 2 tsp chili powder</li>
+<li>2 tsp smoked paprika</li>
+<li>1 tsp sea salt</li>
+<li>4 small-medium cloves garlic</li>
+<br> <p1> SAUCE </p1>
+<li>1/4 cup raw almonds</li>
+<li>1 (15-ounce) can diced fire-roasted tomatoes</li>
+<li>1-2 medium cloves raw garlic </li>
+<li>2 Tbsp olive oil</li>
+<li>1 medium lime, juiced </li>
+<li>1/4 tsp smoked paprika</li>
+<li>1/2 tsp cumin</li>
+<li>1/4 tsp sea salt</li>
+<li>1 Tbsp maple syrup</li>
+<li>1-2 whole chipotle peppers in adobo sauce</li>
+</ul>
+<br>
+<h3>Instructions</h3>
+<ol>
+ <li>Preheat oven to 400 degrees F (204 C) and add cauliflower to 2 large baking sheets (use more baking sheets if increasing batch size). Add oil (or omit/sub water), cumin, chili powder, paprika, and salt. Toss to combine and roast on the bottom rack for 20-25 minutes or until golden brown and tender.</li>
+ <li>To a separate baking sheet, add raw almonds and the 4 unpeeled garlic cloves (amount as original recipe is written // adjust if altering batch size). Roast on the center rack for 10-12 minutes, checking at the 8 minute mark. If the almonds are dark brown and cracking, remove from the oven to avoid burning, but continue cooking garlic until light golden brown and slightly softened. Remove from oven and set aside.</li>
+ <li>While cauliflower finishes roasting, add drained, fire-roasted tomatoes to a high-speed blender along with almonds, roasted garlic (peeled), raw garlic (peeled), oil (or water), lime juice, paprika, cumin, salt, maple syrup, and chipotle peppers in adobo sauce.</li>
+ <li>Blend on high until creamy and smooth, scraping down sides as needed. Taste and adjust flavor as needed, adding more lime for acidity, garlic for kick/zing, salt for saltiness, paprika or cumin for smokiness, maple syrup to offset heat/add sweetness, or chipotle peppers for more heat.</li>
+ <li>To serve, warm tortillas in the microwave or in the oven directly on the still-warm oven racks until pliable. Then add 1-2 Tbsp of the romesco sauce and a generous portion of cauliflower. Serve as is or garnish with lime juice/wedges, cilantro, cabbage, and/or pepitas (optional).</li>
+ <li>Best when fresh. Store leftover sauce in the refrigerator up to 1 week (or 1 month in the freezer), and the cauliflower in the refrigerator up to 3 days. Reheat cauliflower in a 350-degree F (176 C) oven until warm </li>
+</ol>
+
+
 </html>
