--- a/stirfry.html
+++ b/stirfry.html
@@ -8,7 +8,42 @@
 </head>
 <body>
  <h1>Thai Vegetable Stir-fry</h1> 
- <img src="" alt="Vegetable Stir-fry">  
-    
+ <img src="Stir.jpeg" alt="Vegetable Stir-fry">  
+ <h2>This 20-minute Thai vegetable stir-fry features crispy veggies and marinated tofu in a flavorful homemade stir-fry sauce! Try this customizable and quick weeknight dinner for the whole family.</h2>
+  <h3>Ingredients </h3>  
+<ul>
+<li>1 medium kabocha squash, cubed </li>
+<li> 1 medium eggplant, cubed</li>
+<li> 2 cups button mushrooms, sliced </li>
+<li> 1 cup baby corn</li>
+<li> 1 medium broccoli, cut into florets</li>
+<li> 4 oz sugar snap peas</li>
+<li> ⅔ cup firm tofu</li>
+<li> 2 scallions, diced</li>
+<li>⅓ cup veggie broth</li>
+<br><pr>SAUCE</pr>
+<li>4 tablespoons soy sauce</li>
+<li> 2 teaspoons cornstarch</li>
+<li> 2 teaspoons coconut sugar</li>
+<li> 1 tablespoon white vinegar</li>
+<li> 2 garlic cloves, minced</li>
+<li> 1 teaspoon ginger, grated</li>
+<li> ⅓ cup water</li>
+<li>Pinch of chili powder </li>
+</ul>
+<h3> Instructions</h3>
+<ol>
+<li>Put all of the sauce ingredients into a jar, close with a lid and shake well.</li>
+<li>Cut the tofu into cubes and put them in a bowl. Drizzle with stir fry sauce, coat evenly and set aside to marinate.</li>
+<li>Put a large non-stick pan over medium-high heat and add the cubed winter squash and a splash of water or cooking oil Cook for around 5 minutes until it has slightly softened, then add the rest of the vegetables together with the veggie broth.</li>
+<li> Sauté everything for about 6 minutes, stirring frequently, until the liquid is absorbed.</li>
+<li>Finally, add the marinated tofu in the stir fry sauce to the pan and cook for 4-5 more minutes, stirring frequently.</li>
+<li>Once the veggies have become tender-crisp, remove from heat and divide them into serving bowls. Take a small bite and adjust the taste to your liking.</li>
+<li>Serve your vegetable stir-fry with brown rice and top with Thai basil and cashews.</li>
+<li>Enjoy warm or let cool and refrigerate in an airtight container for up to 5 days and reheat in a microwave at your convenience.</li>
+</ol>
+
+
+
 </body>
 </html>
