add link to index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <ul>
 <li><a href="http://127.0.0.1:5500/veganpasta.html"> Vegan Creamy Pasta </a></li>
 <li> <a href="cauliflowertacos.html">Vegan Cauliflower Tacos</a></li>
-<li>               </li>
-<li>                </li>
-
+<li> <a href="stirfry.html"> Thai Vegetable Stir-fry</a></li>
 </body>
 
 
