target _blank to links

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body> 
 <h1> Odin Recipes </h1>
 <ul>
-<li><a href="http://127.0.0.1:5500/veganpasta.html"> Vegan Creamy Pasta </a></li>
-<li> <a href="cauliflowertacos.html">Vegan Cauliflower Tacos</a></li>
-<li> <a href="stirfry.html"> Thai Vegetable Stir-fry</a></li>
+<li><a href="http://127.0.0.1:5500/veganpasta.html" target="_blank"> Vegan Creamy Pasta </a></li>
+<li> <a href="cauliflowertacos.html" target="_blank">Vegan Cauliflower Tacos</a></li>
+<li> <a href="stirfry.html"target="_blank"> Thai Vegetable Stir-fry</a></li>
 </ul>
 </body>
 </html>
